# ProteaEngine

./: .gitignore  CmakeLists.txt  README.md  build.bat
ProteaCore/: CMakeLists.txt
ProteaCore/source/: Protea.h  ProteaPCH.cpp  ProteaPCH.h
ProteaCore/source/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
ProteaCore/source/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
ProteaCore/source/Protea/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
ProteaCore/source/Protea/Core/: Timestep.h
ProteaCore/source/Protea/Events/: ApplicationEvent.h  Event.h  EventFormatter.h  KeyEvent.h  MouseEvent.h
ProteaCore/source/Protea/ImGui/: ImGuiBuild.cpp  ImGuiContext.h  ImGuiLayer.cpp  ImGuiLayer.h
ProteaCore/source/Protea/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
ProteaSandbox/: CMakeLists.txt
ProteaSandbox/source/: SandboxApp.cpp
scripts/: build.bat
